WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12575
SVG Links do not show status text on hover
https://bugs.webkit.org/show_bug.cgi?id=12575
Summary
SVG Links do not show status text on hover
Eric Seidel (no email)
Reported
2007-02-04 03:43:41 PST
SVG Links do not show status text on hover The referenced URL is one of many examples where this fails.
Attachments
The fix (and test case)
(7.90 KB, patch)
2007-02-04 05:28 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
even cleaner patch (and test case)
(12.47 KB, patch)
2007-02-04 05:56 PST
,
Eric Seidel (no email)
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2007-02-04 05:28:40 PST
Created
attachment 12914
[details]
The fix (and test case) It's a little ugly to add all of these SVG_SUPPORTs into this base code, but it's following the existing practice from HTML (which special cases various HTML elements).
Eric Seidel (no email)
Comment 2
2007-02-04 05:56:33 PST
Created
attachment 12915
[details]
even cleaner patch (and test case)
Darin Adler
Comment 3
2007-02-04 18:53:04 PST
Comment on
attachment 12915
[details]
even cleaner patch (and test case) +#ifdef SVG_SUPPORT + else if (m_innerURLElement->hasTagName(SVGNames::aTag)) + return m_innerURLElement->isLink(); +#endif No need for else here. The if before ends in a return. Would be nice if this had a layout test. We could easily add logging of the delegate methods used for status text. r=me
Eric Seidel (no email)
Comment 4
2007-02-05 03:31:06 PST
r19400
. Status text is only part of what changed here. I coped out and didn't add the DRT functionality or test.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug