WebCore/dom/Element.h
@@ -173,7 +173,7 @@ public:
     String innerText() const;
     String outerText() const;
  
-    String title() const;
+    virtual String title() const;
 
 protected:
     virtual void createAttributeMap() const;
