WebCore/html/HTMLElement.h
@@ -54,6 +54,7 @@ public:
     
     String id() const;
     void setId(const String&);
+    virtual String title() const;
     void setTitle(const String&);
     String lang() const;
     void setLang(const String&);
