WebCore/ksvg2/svg/SVGAElement.h
@@ -42,8 +42,9 @@ namespace WebCore {
         SVGAElement(const QualifiedName&, Document*);
         virtual ~SVGAElement();
 
-        // 'SVGAElement' functions
         virtual bool isValid() const { return SVGTests::isValid(); }
+        
+        virtual String title() const;
 
         virtual void parseMappedAttribute(MappedAttribute *attr);
 
