WebCore/ksvg2/svg/SVGTitleElement.h
@@ -35,8 +35,6 @@ namespace WebCore
     public:
         SVGTitleElement(const QualifiedName&, Document*);
 
-        String title() const;
-
         virtual void insertedIntoDocument();
         virtual void removedFromDocument();
         virtual void childrenChanged();
